Finalizando aula de TypeScript

--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "scripts":{
+    "start": "npx tsc && node build/index.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "echo \"Error: no test especified\" && exit 1"
   }
 }
